--- a/index.html
+++ b/index.html
@@ -7,18 +7,28 @@
   <body>
     <p>This is my pagea</p>
     <h1>「Webコンテンツ作成」の成果</h1>
+
     <h2>本テーマについて</h2>
       <p></p>
+
     <h2>プロジェクト課題について</h2>
       <p></p>
-      <p>プロジェクト課題で作成したページ:<a href="">project.html</a></p>
+      <p>プロジェクト課題で作成したページ: <a href="project.html">project.html</a></p>
+      
     <h2>数当てゲーム</h2>
       <p></p>
       <p>数当てゲームのページ:kazuate.html</p>
+
     <h2>各授業回の学習事項</h2>
+
       <h3>第1回 WWW と HTML</h3>
-      <p>HTMLの大まかな構造と要素について学びました。主に文字の表記、ハイパーリンク、リスト表示、画像埋め込みです。飾り気のない最低限の情報を載せたローカルなページが作れるようになりました。</p>
-      <p>演習の成果: <a href="practice-html/elements.html" target="_blank">演習1-4: HTMLのさまざまな要素</a></p>
-    
+        <p> HTMLの大まかな構造と要素について学びました。主に文字の表記、ハイパーリンク、リスト表示、画像埋め込みです。
+          文字は大きさの違うものや斜体のもの、リストは数字のあるものとないものを学びました。飾り気のない最低限の情報を載せたページが作れるようになりました。</p>
+        <p>演習の成果: <a href="practice-html/elements.html" target="_blank">演習1-4: HTMLのさまざまな要素</a></p>
+
+      <h3>第2回 CSSによるWebページの装飾</h3>
+      <h3>第3回 JavaScriptの基本</h3>
+      <h3>第4回 DOMとJavaScript</h3>
+      <h3>第5回 イベント処理</h3>
   </body>
 </html>
