--- a/index.html
+++ b/index.html
@@ -3,32 +3,73 @@
   <head>
     <meta charset="utf-8">
     <title>My test page</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p>This is my pagea</p>
+    <!--<p>This is my pagea</p>-->
+
     <h1>「Webコンテンツ作成」の成果</h1>
 
-    <h2>本テーマについて</h2>
+   <div id="zentai">
+      <div>
+      <h2>本テーマについて</h2>
       <p></p>
+      </div>
 
-    <h2>プロジェクト課題について</h2>
+      <div>
+      <div id="mannnaka">
+
+        <div>
+      <h2>プロジェクト課題について</h2>
       <p></p>
       <p>プロジェクト課題で作成したページ: <a href="project.html">project.html</a></p>
+      </div>
       
-    <h2>数当てゲーム</h2>
+      <div>
+      <h2>数当てゲーム</h2>
       <p></p>
       <p>数当てゲームのページ:kazuate.html</p>
+      </div>
+      
+      </div>
+      </div>
 
-    <h2>各授業回の学習事項</h2>
+  
+      <div>
+      <h2>各授業回の学習事項</h2>
 
-      <h3>第1回 WWW と HTML</h3>
-        <p> HTMLの大まかな構造と要素について学びました。主に文字の表記、ハイパーリンク、リスト表示、画像埋め込みです。
-          文字は大きさの違うものや斜体のもの、リストは数字のあるものとないものを学びました。飾り気のない最低限の情報を載せたページが作れるようになりました。</p>
-        <p>演習の成果: <a href="practice-html/elements.html" target="_blank">演習1-4: HTMLのさまざまな要素</a></p>
+        <div id="kakujyugyo">
 
-      <h3>第2回 CSSによるWebページの装飾</h3>
-      <h3>第3回 JavaScriptの基本</h3>
-      <h3>第4回 DOMとJavaScript</h3>
-      <h3>第5回 イベント処理</h3>
+        <div>
+        <h3>第1回 WWW と HTML</h3>
+          <p> HTMLの大まかな構造と要素について学びました。主に文字の表記、ハイパーリンク、リスト表示、画像埋め込みです。
+            文字は大きさの違うものや斜体のもの、リストは数字のあるものとないものを学びました。飾り気のない最低限の情報を載せたページが作れるようになりました。</p>
+          <p>演習の成果: <a href="practice-html/elements.html" target="_blank">演習1-4: HTMLのさまざまな要素</a></p>
+        </div>  
+
+        <div>
+        <h3>第2回 CSSによるWebページの装飾</h3>
+        <p>CSSでできる装飾について学びました。文字色やリスト表示を横並びにしたり、ボックス表示にしたりできるようになりました。
+          細かい設定をすればアンダーラインの形を変えられたり、色にグラデーションをつけたりすることも可能です。</p>
+          <p>演習の成果: <a href="practice-css/browser-intro.html" target="_blank">演習2-3: ウェブブラウザ説明ページの装飾</a></p>
+        </div>
+
+        <div>
+        <h3>第3回 JavaScriptの基本</h3>
+        </div>
+
+        <div>
+        <h3>第4回 DOMとJavaScript</h3>
+        </div>
+
+        <div>
+        <h3>第5回 イベント処理</h3>
+        </div>
+
+        </div>
+   </div>
+
+   </div>  
+
   </body>
 </html>
