--- a/practice-css/browser-intro.html
+++ b/practice-css/browser-intro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>ウェブブラウザの紹介</title>
-	<link href="broeser-intro.css">
+	<link rel="stylesheet" href="browser-intro.css">
 </head>
 
 <body>
@@ -41,7 +41,7 @@
 </div>
 
 <div>
-<img src="firefox_icon.png">
+<img class="sign" src="firefox_icon.png">
 <h2>Mozilla Firefox</h2>
 <p>Mozilla Firefox（モジラ・ファイアーフォックス）は、Mozilla Foundationおよびその傘下のMozilla Corporationによって開発されているフリーかつオープンソースのウェブブラウザである。</p>
 </div>
