新規作成と第三回

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div>
       <h2>数当てゲーム</h2>
       <p></p>
-      <p>数当てゲームのページ:kazuate.html</p>
+      <p>数当てゲームのページ:<a href="kazuate.html">kazuate.html</a></p>
       </div>
       
       </div>
@@ -56,10 +56,14 @@
 
         <div>
         <h3>第3回 JavaScriptの基本</h3>
+        <p>letでなんでも宣言できる。VScodeで書くより、開発者ツールのコンソールに直接プログラムを入力していくとリアルタイムで動作が確認できる。
+          <p>演習の成果: <a href="practice-js/obj-practice.html" target="_blank">演習3-6: オブジェクトの参照</a></p>
+        </p>
         </div>
 
         <div>
         <h3>第4回 DOMとJavaScript</h3>
+        <p>ボタンでページの中身を書き換えるためにDOMを用いる。この動きはHTMLだけでは難しい。</p>
         </div>
 
         <div>
