--- a/project.html
+++ b/project.html
@@ -4,17 +4,25 @@
       <meta charset="utf-8">
       <title>プロジェクト課題</title>
       <link rel="stylesheet" href="project.css">
+      <script src="weather.js" defer></script>
    </head>
    <body>
     <h1>世界の天気(検索結果1件)</h1>
+      <div id="tenki">
+      <div>
     <h3>マレーシア: クアラルンプール</h3>
-    <img src="雨と傘.png" alt="雨と傘" width="300">
-    <ul>
-        <li>天気: 弱いにわか雨</li>
-        <li>最低気温: 25</li>
-        <li>最高気温: 30</li>
-        <li>湿度: 84</li>
-        <li>風速: 13</li>
-    </ul>
+
+         <img src="雨と傘.png" alt="雨と傘" width="300">
+      </div>
+      <div>
+         <ul>
+            <li>天気: 弱いにわか雨</li>
+            <li>最低気温: 25</li>
+            <li>最高気温: 30</li>
+            <li>湿度: 84</li>
+            <li>風速: 13</li>
+         </ul>
+      </div>
+   </div>
    </body>
 </html>
