新規作成と更新第4回

--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
 
         <div>
         <h3>第4回 DOMとJavaScript</h3>
-        <p>ボタンでページの中身を書き換えるためにDOMを用いる。この動きはHTMLだけでは難しい。</p>
+        <p>ボタンでページの中身を書き換えるためにDOMを用いる。この動きはHTMLだけでは難しい。HTMLで設定したpやli、ul要素などをidで検索して消したり書き換えたりすることができる。
+          新しい要素を追加したり、p要素の中にimg要素を追加したり、div要素の中にp要素を追加したりすることができる。
+        </p>
+        <p>演習の成果: <a href="practice-dom/dom-exercise.html" target="_blank">演習4-5: DOMプログラミング</a></p>
         </div>
 
         <div>
