--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <div>
         <h3>第3回 JavaScriptの基本</h3>
         <p>letでなんでも宣言できる。VScodeで書くより、開発者ツールのコンソールに直接プログラムを入力していくとリアルタイムで動作が確認できる。
+          HTML上でできることもできないことも可能。多機能でコードはさっぱりのHTMLがかけるようになる。javaよりも簡潔でわかりやすいコード。</p>
           <p>演習の成果: <a href="practice-js/obj-practice.html" target="_blank">演習3-6: オブジェクトの参照</a></p>
-        </p>
         </div>
 
         <div>
@@ -71,6 +71,10 @@
 
         <div>
         <h3>第5回 イベント処理</h3>
+        <p>イベント処理の仕方と種類について学んだ。マウスでユーザーがボタンに行う行動ごとに処理を分けることができる。マウスのカーソルを合わせるだけだったり、クリックかダブルクリックかの違いも判別可能。
+          マウスだけでなく表示するボタンの種類を変えることもできる(input要素)ラジオボタンやチェックボックス、色や日付の形も可能。
+        </p>
+        <p>演習の成果: <a href="practice-event/event-list.html" target="_blank">演習5-3: イベントを選択する</a></p>
         </div>
 
         </div>
