--- a/project.html
+++ b/project.html
@@ -7,7 +7,26 @@
       <script src="weather.js" defer></script>
    </head>
    <body>
+      
     <h1>世界の天気(検索結果1件)</h1>
+    <label for="key">都市名: </label>
+
+      <select name="place" id="key">
+     <option value="">都市を選択してください</option>
+     <option value="dog">カイロ</option>
+     <option value="cat">モスクワ</option>
+     <option value="hamster">ヨハネスブルク</option>
+     <option value="parrot">北京</option>
+     <option value="spider">東京</option>
+     <option value="goldfish">シンガポール</option>
+     <option value="dog">シドニー</option>
+     <option value="cat">ロンドン</option>
+     <option value="hamster">パリ</option>
+     <option value="parrot">リオデジャネイロ</option>
+     <option value="spider">ニューヨーク</option>
+     <option value="goldfish">ロサンゼルス</option>
+</select>
+
       <div id="tenki">
       <div>
     <h3>マレーシア: クアラルンプール</h3>
