--- a/kazuate.html
+++ b/kazuate.html
@@ -8,8 +8,11 @@
 
   <body>
     <h1>数当てゲーム</h1>
-    <p>将来ここにはテキストボックスとボタンを設置します</p>
-    <p><span id="kaisu">1</span>回目の予想: <span id="answer">4</span></p>
-    <p id="result">将来ここに判定結果を表示します</p>
+    <!--将来ここにはテキストボックスとボタンを設置します-->
+    <label for="kazu">1から10の間の整数: </label>
+    <input type="text" name="kazu" id="kazu" size="5">
+    <button id="get">回答</button>
+    <p><span id="kaisu">1</span>回目の予想: <span id="answer"></span></p>
+    <p id="result"></p>
   </body>
 </html>
