--- a/project.html
+++ b/project.html
@@ -4,28 +4,31 @@
       <meta charset="utf-8">
       <title>プロジェクト課題</title>
       <link rel="stylesheet" href="project.css">
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"></script>
       <script src="weather.js" defer></script>
    </head>
    <body>
       
     <h1>世界の天気(検索結果1件)</h1>
-    <label for="key">都市名: </label>
+    <label for="place">都市名: </label>
 
-      <select name="place" id="key">
+      <select name="place" id="place">
      <option value="">都市を選択してください</option>
-     <option value="dog">カイロ</option>
-     <option value="cat">モスクワ</option>
-     <option value="hamster">ヨハネスブルク</option>
-     <option value="parrot">北京</option>
-     <option value="spider">東京</option>
-     <option value="goldfish">シンガポール</option>
-     <option value="dog">シドニー</option>
-     <option value="cat">ロンドン</option>
-     <option value="hamster">パリ</option>
-     <option value="parrot">リオデジャネイロ</option>
-     <option value="spider">ニューヨーク</option>
-     <option value="goldfish">ロサンゼルス</option>
+     <option value="360630">カイロ</option>
+     <option value="524901">モスクワ</option>
+     <option value="993800">ヨハネスブルク</option>
+     <option value="1816670">北京</option>
+     <option value="1850147">東京</option>
+     <option value="1880252">シンガポール</option>
+     <option value="2147714">シドニー</option>
+     <option value="2643743">ロンドン</option>
+     <option value="2968815">パリ</option>
+     <option value="3451189">リオデジャネイロ</option>
+     <option value="5128581">ニューヨーク</option>
+     <option value="5368361">ロサンゼルス</option>
 </select>
+
+   <button id="kensaku">検索</button>
 
       <div id="tenki">
       <div>
@@ -34,12 +37,12 @@
          <img src="雨と傘.png" alt="雨と傘" width="300">
       </div>
       <div>
-         <ul>
-            <li>天気: 弱いにわか雨</li>
-            <li>最低気温: 25</li>
-            <li>最高気温: 30</li>
-            <li>湿度: 84</li>
-            <li>風速: 13</li>
+         <ul id="ago">
+            <li>天気: </li>
+            <li>最低気温: </li>
+            <li>最高気温: </li>
+            <li>湿度: </li>
+            <li>風速: </li>
          </ul>
       </div>
    </div>
