--- a/project.html
+++ b/project.html
@@ -10,7 +10,11 @@
    <body>
       
     <h1>世界の天気(検索結果1件)</h1>
-    <label for="place">都市名: </label>
+
+      <div id="tenki">
+      <div>
+
+      <label for="place">都市名: </label>
 
       <select name="place" id="place">
      <option value="">都市を選択してください</option>
@@ -27,14 +31,11 @@
      <option value="5128581">ニューヨーク</option>
      <option value="5368361">ロサンゼルス</option>
 </select>
+      <button id="kensaku">検索</button> 
 
-   <button id="kensaku">検索</button>
+    <h3>都市名: </h3>
 
-      <div id="tenki">
-      <div>
-    <h3>マレーシア: クアラルンプール</h3>
-
-         <img src="雨と傘.png" alt="雨と傘" width="300">
+         <!--<img src="雨と傘.png" alt="雨と傘" width="300">-->
       </div>
       <div>
          <ul id="ago">
